Filter the setup workflow on the setup workflow

--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -1,5 +1,10 @@
 name: Setup
-on: [push]
+on:
+  push:
+    branches:
+      - master
+    paths:
+      - ".github/workflows/setup.yml"
 
 jobs:
   build:
